<resources>
    <string name="app_name">Test ICST</string>
    <string name="map">Test ICST</string>
    <string name="dial">Test ICST</string>
    <string name="mail">Test ICST</string>
    <string name="testImage">just an image</string>
    <string name="app_intro">Абитуриент ИКНТ</string>
    <string name="test_image">testing text</string>
    <string name="Professions">"Будущие профессии:"</string>
    <string name="Exam">"ЕГЭ"</string>
    <string name="Points">"Проходной балл 2019 года:"</string>
    <string name="Places">"Количество бюджетных мест в 2020:"</string>
    <string name="Salary">"Средняя зарплата:"</string>
        <string name="Exam_MIR">"МИР"</string>
        <string name="Exam_MFR">"МФР"</string>
    <string name="Group1_name1_places">24</string>
    <string name="Group1_name2_places">36</string>
    <string name="Group1_name3_places">80</string>
    <string name="Group1_name4_places">36</string>
    <string name="Group1_name5_places">80</string>
    <string name="Group2_name1_places">80</string>
    <string name="Group2_name2_places">36</string>
    <string name="Group2_name3_places">48</string>
    <string name="Group3_name1_places">24</string>
    <string name="Group3_name2_places">36</string>
    <string name="Group3_name3_places">24</string>
    <string name="Group3_name4_places">24</string>
    <string name="Group4_name1_places">24</string>
    <string name="Group4_name2_places">80</string>
    <string name="Group4_name3_places">36</string>
    <string name="Group4_name4_places">80</string>
    <string name="Group4_name5_places">48</string>
    <string name="Group5_name1_places">48</string>
    <string name="Group5_name2_places">24</string>
    <string name="Group6_name1_places">80</string>
    <string name="Group7_name1_places">36</string>
    <string name="Group7_name2_places">24</string>
    <string name="Group7_name3_places">80</string>
    <string name="Group8_name1_places">20</string>
    <string name="Group8_name2_places">24</string>
    <string name="Group1">
        "Проектирование, разработка, тестирование и сопровождение сложных программных продуктов"
    </string>
    <string name="Group1_description">
        Основной задачей является проектирование ПО
 - процесс создания проекта программного
обеспечения (П с использованием и изучением
методов проектирования.
Проектирование ПО включает следующие
основные виды деятельности:
выбор метода и стратегии решения;
выбор представления внутренних данных;
разработка основного алгоритма;
документирование ПО;
изучение данных в области теории управления,
суперкомпьютерных технологий, создание математических моделей;
изучение базовых принципов прикладной математики и информатики
применительно к природным и общественным явлениям.
изучение средств, способов и методов создания
 и использования программного обеспечения
вычислительной техники и автоматизированных систем;
изучение современных языков и технологий программирования;
принцип работы компьютерной техники, сетевых операционных систем;
тестирование и подбор тестов;
выбор представления входных данных.
разработка и тестирование компьютерного софта;
    </string>
    <string name="Group1_professions">
        "Системный аналитик;
Специалист по сетям;
Системный программист;
WEB-Дизайнер;
Бизнесс-аналитик;
Разработчик БД"
    </string>
    <string name="Group1_salary">50-70 тыс. руб.</string>
    <string name="Group1_name1">
        "02.03.02 Фундаментальная информатика и информационные технологии "
    </string>
    <string name="Group1_name1_points">271</string>
    <string name="Group1_name2">
        "02.03.03 Математическое обеспечение и администрирование информационных систем"
    </string>
    <string name="Group1_name2_points">266</string>
    <string name="Group1_name3">
        "09.03.01 Информатика и вычислительная техника"
    </string>
    <string name="Group1_name3_points">269</string>
    <string name="Group1_name4">
        "09.03.04 Прикладная информатика"
    </string>
    <string name="Group1_name4_points">268</string>
    <string name="Group1_name5">
        "Программная инженерия"
    </string>
    <string name="Group1_name5_points">274</string>
    <string name="Group2">
        "Мобильное, распределенное, встраиваемое программное обеспечение"
    </string>
    <string name="Group2_description">
Производится подготовка студентов к решению задач автоматизации и управления, а также обучение, направленное
на развитие навыков по разработке и тестированию ПО.

Дисциплина непосредственно связана с разработкой человеко-машинных интерфейсов, интеллектуальной обработкой
данных. Обучение позволит студентам участвовать в комплексных проектах, участвуя на разных этапах его жизненного
цикла.
    </string>
    <string name="Group2_professions">
        "  Системный программист;
        Системный архитектор;
        Системный аналитик;
        IT директор;"
    </string>
    <string name="Group2_salary">50-120 тыс.руб</string>
    <string name="Group2_name1">
        "09.03.01 Информатика и вычислительная техника"
    </string>
    <string name="Group2_name1_points">269</string>
    <string name="Group2_name2">
        "09.03.03 Прикладная информатика"
    </string>
     <string name="Group2_name2_points">268</string>
    <string name="Group2_name3">
        "27.03.04 Управление в технических системах "
    </string>
    <string name="Group2_name3_points">242</string>
    <string name="Group3">
        "Компьютерные науки, математическая кибернетика и системный анализ"
    </string>
      <string name="Group3_description">
Образовательная составляющая включает изучение учебных дисциплин,
          в том числе методов математической кибернетики, дискретной математики,
          теории управляющих систем, математического программирования, математической
          теории исследования операций и теории игр. Образовательная программа объединяет
          математические науки и достижения в области информационных технологий.
    </string>
    <string name="Group3_professions">
        "Системный аналитик;
        Руководитель проектов в области информационных технологий;
        Специалист по автоматизированным системам управления производством;
        Специалист по информационным ресурсам;
        Специалист по информационным системам;
        Специалист по тестированию в области информационных технологий;
        IT-специалист;
        Администратор базы данных;
        Системный администратор;"
    </string>
     <string name="Group3_salary">60-80 тыс. руб</string>
    <string name="Group3_name1">
        "02.03.02 Фундаментальная информатика и информационные технологии "
    </string>
     <string name="Group3_name1_points">271</string>
    <string name="Group3_name2">
        "02.03.03 Математическое обеспечение и администрирование информационных систем"
    </string>
    <string name="Group3_name2_points">266</string>
    <string name="Group3_name3">
        "09.03.02 Информационные системы и технологии"
    </string>
    <string name="Group3_name3_points">267</string>
    <string name="Group3_name4">
        "27.03.03 Системный анализ и управление"
    </string>
    <string name="Group3_name4_points">243</string>
    <string name="Group4">
        "Искусственный интеллект и машинное обучение"
    </string>
    <string name="Group4_description">
Дисциплина изучает разработку искусственного интеллекта и
        класс методов искусственного интеллекта, характерной
        чертой которых является не прямое решение задачи, а
        обучение в процессе применения решений множества сходных задач.
Целью освоения дисциплины является ознакомление студентов с
        теоретическими основами и основными принципами машинного обучения,
        а именно, с классами моделей, метриками качествами и подходами к
        подготовке данных. В рамках дисциплины изучаются методы проверки
        статистических гипотез, линейные модели регрессии, классификации и
        кластеризации, ансамбли и деревья решений, нейросетевые технологии машинного обучения.

    </string>
    <string name="Group4_professions">
Разработчик машинного обучения;
        Специалист по глубинному машинному обучению

    </string>
     <string name="Group4_salary">50-300 тыс. руб</string>
     <string name="Group4_name1">
        "02.03.03 Фундаментальная информатика и информационные технологии "
    </string>
    <string name="Group4_name1_points">271</string>
    <string name="Group4_name2">
        "09.03.01 Информатика и вычислительная техника"
    </string>
     <string name="Group4_name2_points">269</string>
    <string name="Group4_name3">
        "09.03.03 Прикладная информатика"
    </string>
     <string name="Group4_name3_points">268</string>
    <string name="Group4_name4">
        "09.03.04 Программная инженерия"
    </string>
     <string name="Group4_name4_points">274</string>
    <string name="Group4_name5">
        "27.03.04 Управление в технических системах"
    </string>
     <string name="Group4_name5_points">242</string>
    <string name="Group5">
        "Промышленный интернет вещей, киберфизические системы и управление"
    </string>
  <string name="Group5_description">
Системы автоматизации, управления, контроля, а также системы технического диагностирования и
информационного обеспечения и методы
проектирования автоматизированных технических
систем — вот основные предметы для студентов этого
профиля. Сложные технические задания на
программирование и составление чертежей занимают
большую часть времени обучения. Обычная практика
для студента этой специальности — работа
программистом-практикантом в летние каникулы.

Квалификация выпускника — не просто бакалавр, а
бакалавр-инженер. В блоке общих инженерно-
технических дисциплин изучаются инженерная и
компьютерная графика, материаловедение,
теоретическая механика, теоретические основы
электротехники и электроники. К базовым
профессиональным предметам относятся теория
автоматического управления, системный анализ
автоматизация и принятие решений. Целый ряд
курсов посвящен IT-подготовке: теория и технология
программирования, теория информационных систем,
моделирование систем и др.
    </string>
    <string name="Group5_professions">
        "Бизнес-аналитик;
        Специалист по кибербезопасности;
        Системный аналитик;"
    </string>
     <string name="Group5_salary">30-150 тыс. руб</string>
    <string name="Group5_name1">
        "27.03.04 Управление в технических системах"
    </string>
     <string name="Group5_name1_points">242</string>
    <string name="Group5_name2">
        "27.03.03 Системный анализ и управление"
    </string>
     <string name="Group5_name2_points">243</string>
    <string name="Group6">
        "Проектирование и разработка цифровых систем и устройств"
    </string>
    <string name="counter1">1/21</string>
    <string name="quest1">Выбери проект, в разработке которого ты бы хотел
        поучаствовать</string>
    <string name="quest1ans1">Платформа машинного интеллекта, которая поможет организациям
        строить приложения обработки больших данных </string>
    <string name="quest1ans2">Проект умного города</string>
    <string name="quest1ans3">Программное обеспечение, предназначенное для работы на смартфонах,
        планшетах и других мобильных устройствах, разработанное для повышения
        производительности устройства</string>
    <string name="findOutMore">Узнать подробнее</string>
    <string name="weRecommend">Мы рекомендуем вам направление</string>
    <string name="startAgain">Пройти заново</string>
    <string name="backToMenu">Вернуться в меню</string>
</resources>