<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/quest1ans3"
        android:layout_width="328dp"
        android:layout_height="99dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/answers_style"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/quest1ans3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quest1ans2" />

    <Button
        android:id="@+id/quest1ans2"
        android:layout_width="328dp"
        android:layout_height="99dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/answers_style"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/quest1ans2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/quest1ans3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quest1ans1" />

    <TextView
        android:id="@+id/counter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="342dp"
        android:layout_marginRight="342dp"
        android:layout_marginBottom="18dp"
        android:text="@string/counter1"
        android:textColor="@color/darkestGrey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/quest1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quest1"
        android:layout_width="328dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="39dp"
        android:text="@string/quest1"
        android:textColor="@color/darkestGrey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/quest1ans1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter1" />

    <Button
        android:id="@+id/quest1ans1"
        android:layout_width="328dp"
        android:layout_height="99dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/answers_style"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/quest1ans1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/quest1ans2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quest1" />
</androidx.constraintlayout.widget.ConstraintLayout>